--- a/vizualizarePiese.fxml
+++ b/vizualizarePiese.fxml
@@ -6,17 +6,26 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="558.0" prefWidth="804.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TableView layoutX="48.0" layoutY="158.0" prefHeight="155.0" prefWidth="294.0">
+      <TableView layoutX="48.0" layoutY="135.0" prefHeight="155.0" prefWidth="294.0">
          <columns>
             <TableColumn prefWidth="163.1999740600586" text="Denumire" />
             <TableColumn prefWidth="128.79998779296875" text="Data" />
          </columns>
       </TableView>
-      <Label layoutX="48.0" layoutY="117.0" text="Piesele:" />
-      <Button layoutX="467.0" layoutY="46.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="78.0" text="Login" />
-      <Button layoutX="300.0" layoutY="46.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="78.0" text="Signup" />
+      <Label layoutX="48.0" layoutY="106.0" text="Piesele:" />
+      <Button layoutX="635.0" layoutY="135.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="78.0" text="Login" />
+      <Button layoutX="635.0" layoutY="48.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="78.0" text="Signup" />
+      <TableView layoutX="48.0" layoutY="344.0" prefHeight="200.0" prefWidth="378.0">
+         <columns>
+            <TableColumn prefWidth="75.0" text="Loja" />
+            <TableColumn prefWidth="75.0" text="Randul" />
+            <TableColumn prefWidth="75.0" text="Numar" />
+            <TableColumn prefWidth="75.0" text="Pret" />
+            <TableColumn prefWidth="75.0" text="Stare" />
+         </columns>
+      </TableView>
+      <Label layoutX="48.0" layoutY="312.0" text="Locurile disponibile" />
    </children>
 </AnchorPane>
